--- a/src/css/styles-prueba.css
+++ b/src/css/styles-prueba.css
@@ -24,6 +24,15 @@
   text-decoration: none;
 }
 
+.main-container {
+    transition: all .5s;
+}
+
+.navbar h2 {
+    color: var(--gray);
+    text-transform: lowercase;
+}
+
 .navbar .fixed {
     left: 0;
     position: fixed;
@@ -50,7 +59,7 @@
 }
 
 .car-icon {
-    color: var(--bg-color);
+    color: var(--text-gray);
 }
 
 .car-icon:hover {
@@ -68,13 +77,18 @@
     transition: all .5s;
     width: 300px;
     z-index: 9;
+    
+}
+
+.carON {
+    transition: all .5s;
+    opacity: 0.3;
 }
 
 .cart-modal.open {
     right: 0;
     
 }
-
 
 .cart .minimalist-scrollbar {
     flex: 1 1;
@@ -94,6 +108,12 @@
     overflow: auto;
     text-align: center;
     margin-top: 1rem;
+}
+
+.minimalist-scrollbar i {
+    position: absolute;
+    margin-left: 7.5rem;
+    top: .5rem;
 }
 
 .content {
@@ -155,7 +175,6 @@ input {
     margin-top: 1rem;
     margin-right: 1rem;
 }
-
 
 
 .product-card .image {
@@ -229,7 +248,9 @@ button {
     gap: 3rem;
   }
 
-  
+.categoriesoff {
+    display: none;
+}  
 
 @media (min-width: 992px){
     .cart-modal {
