--- a/src/css/styles-prueba.css
+++ b/src/css/styles-prueba.css
@@ -134,6 +134,11 @@
     
 }
 
+.cart-button i {
+    color: white;
+    
+}
+
 input {
     font-size: 1rem;
     outline: none;
@@ -154,6 +159,7 @@ input {
     flex: 1 1;
     font-size: .9rem;
     padding: 5px 14px;
+    
 }
 
 .products-list {
@@ -173,9 +179,14 @@ input {
     height: 100%;
     position: relative;
     margin-top: 1rem;
+    
     margin-right: 1rem;
 }
 
+.product-card a {
+    display: block;
+    text-decoration: none;
+}
 
 .product-card .image {
     align-items: center;
@@ -191,7 +202,7 @@ input {
     height: 80%;
     margin: 0 auto;
     object-fit: contain;
-    width: 70%;
+    width: 80%;
     
 }
 
@@ -219,6 +230,12 @@ input {
     margin-left: 1rem;
 }
 
+.product-card .info .amount {
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-left: 10px;
+}
+
 .product-card .info * {
     display: block;
 }
@@ -226,7 +243,7 @@ input {
 .product-card .cart-button {
     background: var(--primary);
     border-radius: 50%;
-    bottom: 30px;
+    bottom: 15px;
     color: #fff;
     font-size: 1.3rem;
     height: 50px;
@@ -244,19 +261,277 @@ button {
 
 .product-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
-    gap: 3rem;
-  }
+    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+    gap: 1rem;
+    justify-content: center;
+    margin-right: 2.4rem;
+}
+
+  
 
 .categoriesoff {
     display: none;
 }  
+
+.main-container {
+    margin: 0 auto;
+    padding: 13px 20px;
+}
+
+.history {
+    align-items: center;
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.product-info .brand {
+    color: var(--gray);
+    font-size: 1.1rem;
+    margin-bottom: 10px;
+}
+
+.product-info .product-data {
+    display: flex;
+    flex-direction: column;
+}
+
+.product-info h2 {
+    margin-bottom: 20px;
+    margin-left: 10px;
+}
+
+.product-info .product-description {
+    margin-bottom: 30px;
+}
+
+.history .separator {
+    background: var(--primary);
+    border-radius: 50%;
+    height: 6px;
+    margin: 0 14px;
+    width: 6px;
+}
+
+.product-info .product-options .price {
+    width: 50%;
+}
+
+.product-info .product-options .label {
+    color: var(--gray);
+    margin-bottom: 5px;
+}
+
+.product-info .product-options .flex {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.product-info .add-cart-button {
+    background: var(--primary);
+    color: #fff;
+    font-size: 1.1rem;
+    margin-bottom: 50px;
+    padding: 15px;
+    width: 100%;
+}
+.product-info .product-description {
+    margin-bottom: 30px;
+}
+
+.images-gallery {
+    margin-bottom: 20px;
+    overflow: hidden;
+}
+
+.images-gallery .gallery {
+    position: relative;
+}
+
+
+img {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+.images-gallery .button-gallery.left {
+    left: 0;
+}
+
+.images-gallery .button-gallery.right {
+    right: 0;
+}
+
+
+.images-gallery .button-gallery {
+    align-items: center;
+    bottom: 0;
+    display: flex;
+    position: absolute;
+    top: 0;
+}
+
+.images-gallery .images-list {
+    display: flex;
+    height: 350px;
+    list-style: none;
+    transition: .5s ease-in-out;
+}
+
+.product-detail .suggestions {
+    margin-bottom: 70px;
+}
+
+.product-detail .suggestions ul {
+    list-style: none;
+}
+
+.product-detail .suggestions>strong {
+    color: var(--primary);
+    display: block;
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+}
+
+.images-gallery .button-gallery button {
+    background: var(--primary);
+    border-radius: 50%;
+    color: #fff;
+    font-size: 1.3rem;
+    height: 40px;
+    line-height: 2.2;
+    width: 40px;
+    z-index: 9;
+}
+
+.add-cart-button {
+    display: flex;
+    justify-content: center;
+}
+
+.product-info .add-cart-button {
+    background: var(--primary);
+    color: #fff;
+    font-size: 1.1rem;
+    margin-bottom: 50px;
+    padding: 15px;
+    width: 100%;
+    border-radius: 5px;
+}
+
+.product-info .add-cart-button i {
+    margin-left: 5px;
+    color: white;
+    
+}
+
+.product-info .product-options .price .amount {
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-left: 10px;
+}
+
+.product-info .product-options .price span {
+    display: block;
+}
+
+@media (min-width: 520px){
+.product-detail .suggestions ul {
+    display: flex;
+    flex-wrap: wrap;
+ }
+
+ .product-detail .suggestions li {
+    width: 50%;
+ }
+
+} 
 
 @media (min-width: 992px){
     .cart-modal {
      top: 100px;
   }
 
+  .images-gallery .images-preview {
+    display: block;
+    display: flex;
+    justify-content: center;
+    list-style: none;
+ }
+
+ .images-gallery .images-preview li.selected {
+    border: 2px solid var(--primary);
+    border-radius: 6px;
+ }
+
+ .images-gallery .images-preview li {
+    height: 70px;
+    margin: 0 10px;
+    padding: 5px;
+    width: 70px;
+ }
+
+ .images-gallery .images-preview li img {
+    cursor: pointer;
+    height: 100%;
+    object-fit: contain;
+ }
+
+ .product-detail .suggestions ul li {
+    padding: 30px;
+}
+
+ .images-gallery .gallery {
+    margin-bottom: 40px;
+    
+}
+
+.product-list {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(350px, auto));
+    gap: 2rem;
+    justify-content: center;
+ }
+ 
+ .main-container {
+    max-width: 976px;
+ }
+
+ .images-gallery .gallery {
+    margin-bottom: 40px;
+    
+ }
+
+ 
+}
+
+@media (min-width: 768px){
+.product-detail .product-info-flex {
+    display: flex;
+ }
+
+ .product-detail .product-info-flex>.col {
+    padding: 20px;
+    width: 50%;
+ }
+
+ .product-detail .product-info-flex {
+    display: flex;
+}
+
+ .product-info .product-data {
+    flex-direction: column-reverse;
+ }
+
+ .product-detail.main-container {
+    max-width: 992px;
+ }
+ 
+}  
+
+
+@media (min-width: 992px){
 
 }
-  
+
+
+
