--- a/src/css/loading-screen.css
+++ b/src/css/loading-screen.css
@@ -1,3 +1,14 @@
+:root {
+  --main-color: #fd4646;
+  --text-color: #171427;
+  --bg-color: #fff;
+  --primary: #f85555;
+  --light-gray: #dcd9d9;
+  --gray: #c7c7c7;
+  --dark-gray: #4f4f4f;
+  --text-gray: #ababab;
+}
+
 .overlay {
   position: fixed;
   top: 0;
@@ -28,7 +39,7 @@
   width: 7px;
   height: 7px;
   border-radius: 50%;
-  background: #fff;
+  background: var(--primary) ;
   margin: -4px 0 0 -4px;
 }
 
