--- a/src/css/styles-prueba.css
+++ b/src/css/styles-prueba.css
@@ -933,7 +933,21 @@ img {
         position: absolute;
         left: 900px;
   }
-  
+  .GuidUsers{
+   position: absolute;
+   top: 100px;
+   justify-content: center;   
+   background-color:#ababab;
+  height: 80px;
+  width: 400px;  
+  font-size:small;
+    }
+    h6{
+text-align: center;
+color:beige;
+font-family: 'Times New Roman', Times, serif;
+    }
+
   .image-selected {
     margin-top: 0;
     align-items: center;
